# verifiers-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: 01_monitor.py  02_access_data.py
tests/: __init__.py  conftest.py  test_collectors.py  test_core.py  test_dashboard.py  test_storage.py
verifiers_monitor/: __init__.py  data_access.py
verifiers_monitor/core/: __init__.py  collectors.py  constants.py  exceptions.py  models.py  sqlmodel_storage.py  wrappers.py
verifiers_monitor/dashboard/: __init__.py  manager.py  server.py
verifiers_monitor/dashboard/routes/: __init__.py  api.py  websocket.py
verifiers_monitor/dashboard/services/: __init__.py  data_service.py
verifiers_monitor/dashboard/static/css/: dashboard.css
verifiers_monitor/dashboard/static/js/: dashboard.js
verifiers_monitor/dashboard/static/js/modules/: api.js  charts.js  dom.js  navigation.js  sessions.js  state.js  websocket.js
verifiers_monitor/dashboard/templates/: dashboard.html
verifiers_monitor/infrastructure/: __init__.py  async_monitor.py  system_monitor.py  vllm_monitor.py
verifiers_monitor/utils/: __init__.py  cli_output.py  logging.py  networking.py  recovery.py  serialization.py  tunnel.py  validation.py
