[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifiers-monitor"
version = "0.1.0"
description = "Observability framework for Verifiers RL training and evaluation"
authors = [
    {name = "Kaushik Bokka", email = "kaushikbokka@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine-learning", "reinforcement-learning", "monitoring", "observability", "verifiers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    "psutil>=5.8.0",
    "aiohttp>=3.8.0",
    "pyngrok>=7.0.0",
    "sqlmodel>=0.0.14",
    "rich>=10.0.0",
    "verifiers",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]

analysis = [
    "pandas>=1.3.0",
]

export = [
    "wandb>=0.12.0",
    "prometheus-client>=0.14.0",
    "pandas>=1.3.0",
]

gpu = [
    "GPUtil>=1.4.0",
    "pynvml>=8.0.4",
]

[project.urls]
Homepage = "https://github.com/kaushikb11/verifiers-monitor"
Repository = "https://github.com/kaushikb11/verifiers-monitor"
Issues = "https://github.com/kaushikb11/verifiers-monitor/issues"
Documentation = "https://github.com/kaushikb11/verifiers-monitor#readme"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["verifiers_monitor"]

[tool.hatch.build.targets.sdist]
include = [
    "/verifiers_monitor",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
]
