[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifiers-monitor"
version = "0.1.1"
description = "Observability framework for Verifiers RL training and evaluation"
authors = [
    {name = "Kaushik Bokka", email = "kaushikbokka@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine-learning", "reinforcement-learning", "monitoring", "observability", "verifiers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.0",
    "psutil>=7.1.0",
    "aiohttp>=3.12.0",
    "pyngrok>=7.4.0",
    "sqlmodel>=0.0.25",
    "rich>=14.1.0",
    "verifiers",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.0",
    "pre-commit>=4.0.0",
]

analysis = [
    "pandas>=2.3.0",
]

gpu = [
    "GPUtil>=1.4.0",
    "pynvml>=8.0.4",
]

[project.urls]
Homepage = "https://github.com/kaushikb11/verifiers-monitor"
Repository = "https://github.com/kaushikb11/verifiers-monitor"
Issues = "https://github.com/kaushikb11/verifiers-monitor/issues"
Documentation = "https://github.com/kaushikb11/verifiers-monitor#readme"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["verifiers_monitor"]

[tool.hatch.build.targets.sdist]
include = [
    "/verifiers_monitor",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
]
